--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     
-    <script src="js/ejercicio4"></script>
+    <script src="js/ejercicio5.js"></script>
     <script src="js/ejercicio6.js"></script>
     <script src="/js/ejercicio7.js"></script>
 </body>
